// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emoticons 1`] = `
"<p>Hello <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\" class=\\"foo bar\\"> Hey <img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\" class=\\"foo bar\\"></p>
<p><img src=\\"/static/smileys/smile.png\\" alt=\\":)\\" class=\\"foo bar\\"></p>
<blockquote>
<p>Citation</p>
</blockquote>
<p><img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\" class=\\"foo bar\\"> This is not a caption</p>
<p><img src=\\"https://zestedesavoir.com/media/galleries/3014/bee33fae-2216-463a-8b85-d1d9efe2c374.png\\" alt=\\"toto\\"></p>
<p><img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\" class=\\"foo bar\\"> This is not a caption</p>
<p>This is not a smiley:)</p>
<p>Not :)a smiley either.</p>
<p>Smiley after another node: <a href=\\"#foo\\">link</a><img src=\\"/static/smileys/smile.png\\" alt=\\":)\\" class=\\"foo bar\\"></p>
<p>Smiley after another node w/2 spaces: <a href=\\"#foo\\">link</a>  <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\" class=\\"foo bar\\"></p>
<p>Smiley after another node w/3 spaces: <a href=\\"#foo\\">link</a>   <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\" class=\\"foo bar\\"></p>"
`;

exports[`emoticons without class 1`] = `
"<p>Hello <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\"> Hey <img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\"></p>
<p><img src=\\"/static/smileys/smile.png\\" alt=\\":)\\"></p>
<blockquote>
<p>Citation</p>
</blockquote>
<p><img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\"> This is not a caption</p>
<p><img src=\\"https://zestedesavoir.com/media/galleries/3014/bee33fae-2216-463a-8b85-d1d9efe2c374.png\\" alt=\\"toto\\"></p>
<p><img src=\\"/static/smileys/heureux.png\\" alt=\\":D\\"> This is not a caption</p>
<p>This is not a smiley:)</p>
<p>Not :)a smiley either.</p>
<p>Smiley after another node: <a href=\\"#foo\\">link</a><img src=\\"/static/smileys/smile.png\\" alt=\\":)\\"></p>
<p>Smiley after another node w/2 spaces: <a href=\\"#foo\\">link</a>  <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\"></p>
<p>Smiley after another node w/3 spaces: <a href=\\"#foo\\">link</a>   <img src=\\"/static/smileys/smile.png\\" alt=\\":)\\"></p>"
`;

exports[`renders to markdown 1`] = `
"Hello :) Hey :D

:)

> Citation

:D This is not a caption

![toto](https://zestedesavoir.com/media/galleries/3014/bee33fae-2216-463a-8b85-d1d9efe2c374.png)

:D This is not a caption

This is not a smiley:)

Not :)a smiley either.

Smiley after another node: [link](#foo):)

Smiley after another node w/2 spaces: [link](#foo)  :)

Smiley after another node w/3 spaces: [link](#foo)   :)
"
`;
